--- a/welcome-page.html
+++ b/welcome-page.html
@@ -39,7 +39,8 @@ $(document).ready(function(){
   });
 });
 </script>
-    <div class="page"><nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="page"><nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-bottom" style="height: 60px;">
+      
   <div class="container">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,69 +56,90 @@ $(document).ready(function(){
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-
     </ul>
   </div>
   </div>
 </nav>
 <div class="every-element">
   <div class="container">
-    <div class="row">
-      <div class="col-6">
-    	<div class="center"><h1 class="display-3 center-title">
+    <div>
+      <div class="col-12">
+    	<h1 class="display-3">
     		TOPVACANCY.COM
-    	</h1>
-        <ul class="center">
+    	</h1></div>
+      <div class="every-element row">
+      <div class="col-6">
+        <ul>
            <li class="font-weight-light">Качественный сервис</li>
            <li class="font-weight-light">Отзывчивая техническая поддержка</li>
            <li class="font-weight-light">Подходящий подбор вакансий</li>
         </ul>
          </div>
-         </div>
+         
         <div class="col-6 row">
           <div class="col-6 vertical-auto">
-          <button type="button" class="btn btn-outline-success btn-lg center">Я ищу работу</button>
+          <button type="button" class="btn btn-outline-success btn-lg float-left">Я ищу работу</button>
           </div>
           <div class="col-6 vertical-auto">
-          <button type="button" class="btn btn-outline-info btn-lg center">Я ищу работников</button>
+          <button type="button" class="btn btn-outline-info btn-lg float-right">Я ищу работников</button>
           </div>        
         </div>
-</div>
-</div>
-</div>
-<div class="container">
+        </div>
+        </div>
+
+
+
+
+<div class="every-element">
 <a href="file:///D:/Ilias/Ilyas%20Life%20Programm/PRGMING/repositories/Practice/welcome-page.html#" type="button" class="btn btn-primary btn-lg btn-block center" style="color: white;">Почему Topvacancy?</a>
+</div>
+</div>
 </div>
 </div>
 <div class="bg-dark">
 <div class="container every-element">
-  <div class="row">
-  <div class="col-6">
-    <div>
-  <h1 class="display-4 center-title white-text float-left">Универсальность</h1>
+    <div class="inline">
+  <h1 class="display-4 white-text float-left">Универсальность</h1>
   </div>
+  <div>
   <p class="white-text font-weight-light">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua.
   </p>
+
 </div>
-<div class="col-6 row">
-  <img src="assets/images/review1.png" class="col-7 float-left">
-  <img src="assets/images/review2.png" class="col-7 float-right">
+
+<div class="row clearfix every-element">
+  <img src="assets/images/review1.png" class="col float-left">
+
+  <img src="assets/images/review2.png" class="col float-right">
+</div>
 
 </div>
 </div>
+<div class="container every-element">
+  <div class="inline">
+  <h1 class="display-4 float-left">Актуальность</h1>
+  </div>
+  <div class="row">
+    <div class="col-6">
+  <p class="font-weight-light">
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  consequat.
+  </p>
+  <img src="assets/images/review1.png" class="col center every-element">
+  </div>
+  <div class="col row">
+    <div class="row clearfix">
+    <div class="every-element">
+    <img src="assets/images/review3.png" class="col-11 float-right">
+    </div>
+    </div>
+    </div>
+  </div>
+  </div>
 </div>
 </div>
 </body>
