--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@ $(document).ready(function(){
     	<h1 class="grand-title center-title display-3">
     		TOPVACANCY.COM
     	</h1>
-    	<p class="font-weight-light center-title"> Лучший сервис в сфере занятости</p></div>
+    	<p class="title font-weight-light center-title"> Лучший сервис в сфере занятости</p></div>
       <div class="every-element row">
          
-        <div class="col-12 row justify-content-around">
-          <div class="col-6 col-lg-4 row justify-content-center">
+        <div class="col-12 row">
+          <div class="col-6 col-lg-5 row justify-content-center">
           <button type="button" class="btn btn-outline-success btn-lg text-nowrap button-choice"><span class="button">Я ищу работу</span></button>
           </div>
-          <div class="col-6 col-lg-4 row justify-content-center">
+          <div class="col-6 col-lg-5 row justify-content-center">
           <button type="button" class="btn btn-outline-info btn-lg text-nowrap button-choice"><span class="button">Я ищу работников</span></button> 
            </div>
           <div class="collapse center" id="collapseExample" style="padding-top: 20px;">
@@ -101,7 +101,7 @@ $(document).ready(function(){
   </div>
   <div class="row">
   <div class="col-12">
-  <p class="white-text font-weight-light">
+  <p class="white-text font-weight-light description text-break">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua.
   </p>
@@ -125,7 +125,7 @@ $(document).ready(function(){
   </div>
   <div class="row">
     <div class="col-12 col-md-6">
-    <p class="font-weight-light">
+    <p class="font-weight-light description text-break">
   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -158,7 +158,7 @@ $(document).ready(function(){
     </div>
     </div>
     <div class=" col-12 col-md-6">
-    <p class="font-weight-light white-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    <p class="font-weight-light white-text description text-break">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua.</p> 
     
     <div class="every-element col center scale">
@@ -171,10 +171,10 @@ $(document).ready(function(){
   <div>
   <p class="display-5 center-title">С Topvacancy Ваши мечты могут воплотиться в явь. Ну так что?</p>
   <div class="justify-content-center row">
-    <h1>Готовы приступить?</h1>
+    <h1 class="grand-title" style="text-align: center;">Готовы приступить?</h1>
   </div>
   <div class="row every-element">
-    <button href="#main" type="button" class="col-2 btn btn-primary btn-lg btn-block center" data-toggle="modal" data-target="#exampleModal"><a style="color: white;">Да</a></button>
+    <button href="#main" type="button" class="col-11 col-md-6 col-lg-2 btn btn-primary btn-lg btn-block center" data-toggle="modal" data-target="#exampleModal"><a style="color: white;">Да</a></button>
     <div class="modal fade row" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-md col-12">
     <div class="modal-content">
